{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 27,
  "lineage": "82def66c-3603-6386-019f-fabc44754e5e",
  "resources": [
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5239870cadff63c",
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:instance/i-0737426c8ef684627",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0737426c8ef684627",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "./key/tokyo.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06819427149b787e6",
            "private_dns": "ip-10-16-48-160.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.48.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe7c270f44827b71",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e27bcc4e0edab08c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b8f88e12b3ee516",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e27bcc4e0edab08c"
            ]
          },
          "dependencies": [
            "module.computing.aws_key_pair.keypair",
            "module.computing.data.aws_ami.ec2_ami",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.private_instance",
            "module.security.aws_security_group.public_instance"
          ]
        }
      ]
    },
    {
      "module": "module.computing",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5239870cadff63c",
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:instance/i-0157d07a38631739d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0157d07a38631739d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "./key/tokyo.pub",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f964c24a3fdc3ff",
            "private_dns": "ip-10-16-40-218.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.40.218",
            "public_dns": "ec2-57-180-47-190.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.47.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0776c260a7a45e15a",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02acd5e989c772284"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7497891d2bc5698",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02acd5e989c772284"
            ]
          },
          "dependencies": [
            "module.computing.aws_key_pair.keypair",
            "module.computing.data.aws_ami.ec2_ami",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_instance"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07191a53289ff8a47",
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:elastic-ip/eipalloc-07191a53289ff8a47",
            "domain": "vpc",
            "id": "eipalloc-07191a53289ff8a47",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-180-233-174.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.180.233.174",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:internet-gateway/igw-0398bf68cc136a0bf",
            "id": "igw-0398bf68cc136a0bf",
            "owner_id": "148761657199",
            "tags": {
              "Name": "lab-igw"
            },
            "tags_all": {
              "Name": "lab-igw"
            },
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07191a53289ff8a47",
            "association_id": "eipassoc-0516a17138e78b550",
            "connectivity_type": "public",
            "id": "nat-0c7a10fd583c76dad",
            "network_interface_id": "eni-09e1c45dad3952f7c",
            "private_ip": "10.16.45.23",
            "public_ip": "57.180.233.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c7497891d2bc5698"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0451a9a034ff798e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7a10fd583c76dad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451a9a034ff798e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0398bf68cc136a0bf",
            "id": "r-rtb-096abcf1082b83c1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096abcf1082b83c1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:route-table/rtb-0451a9a034ff798e8",
            "id": "rtb-0451a9a034ff798e8",
            "owner_id": "148761657199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab private route table"
            },
            "tags_all": {
              "Name": "lab private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:route-table/rtb-096abcf1082b83c1d",
            "id": "rtb-096abcf1082b83c1d",
            "owner_id": "148761657199",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab public route table"
            },
            "tags_all": {
              "Name": "lab public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdd3af262939a5ea",
            "route_table_id": "rtb-0451a9a034ff798e8",
            "subnet_id": "subnet-04b8f88e12b3ee516"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9d77750d36034a1",
            "route_table_id": "rtb-0451a9a034ff798e8",
            "subnet_id": "subnet-00ca4846cdab25933"
          },
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a2d2f203033b89",
            "route_table_id": "rtb-096abcf1082b83c1d",
            "subnet_id": "subnet-0c7497891d2bc5698"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4c8df3ac42fb4af",
            "route_table_id": "rtb-096abcf1082b83c1d",
            "subnet_id": "subnet-0c56b8d1050299799"
          },
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:subnet/subnet-04b8f88e12b3ee516",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b8f88e12b3ee516",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761657199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab Public Private 1"
            },
            "tags_all": {
              "Name": "lab Public Private 1"
            },
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:subnet/subnet-00ca4846cdab25933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.16.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ca4846cdab25933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761657199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab Public Private 2"
            },
            "tags_all": {
              "Name": "lab Public Private 2"
            },
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:subnet/subnet-0c7497891d2bc5698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7497891d2bc5698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761657199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab Public Subnet 1"
            },
            "tags_all": {
              "Name": "lab Public Subnet 1"
            },
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:subnet/subnet-0c56b8d1050299799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.16.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c56b8d1050299799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761657199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab Public Subnet 2"
            },
            "tags_all": {
              "Name": "lab Public Subnet 2"
            },
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:vpc/vpc-03152f07c9e958f92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-0453cf865ec7d600c",
            "default_route_table_id": "rtb-095498911134d2fa9",
            "default_security_group_id": "sg-073c8aa7c8f82647f",
            "dhcp_options_id": "dopt-070b6f4f02da30a1c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03152f07c9e958f92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-095498911134d2fa9",
            "owner_id": "148761657199",
            "tags": {
              "Name": "lab-vpc"
            },
            "tags_all": {
              "Name": "lab-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:security-group/sg-0e27bcc4e0edab08c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e27bcc4e0edab08c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02acd5e989c772284"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-instace-sg",
            "name_prefix": "",
            "owner_id": "148761657199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-instace-sg"
            },
            "tags_all": {
              "Name": "private-instace-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_instance"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:148761657199:security-group/sg-02acd5e989c772284",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02acd5e989c772284",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "171.250.165.116/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-instace-sg",
            "name_prefix": "",
            "owner_id": "148761657199",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-instace-sg"
            },
            "tags_all": {
              "Name": "public-instace-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03152f07c9e958f92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}